Fix menu margin on mobile

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -10,6 +10,10 @@
     font-weight: 200;
 }
 
+.link-text {
+    margin-left: 30px;
+}
+
 .navbar {
     padding-top: 40px;
     margin-right: 30px;
